--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Times New Roman", Times New Roman, sans-serif;
+    font-family: "Times New Roman", Times, sans-serif;
     background-color: #000000;
     color: #ffffff;
   }
@@ -61,8 +61,7 @@ div {
     text-align: left;
 }
 
-footer {
+footer p {
     text-align: center;
-    padding-bottom: 10px;
-    padding-right: 10px;
+    padding: 0px 10px 10px 0px;
 }
